--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
     <!--
     
-                              ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-                             ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-                             ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-                             ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-                             ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-                              ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                                        Adrian Bece, 2015.
-                            -->
+                                          ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+                                         ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+                                         ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+                                         ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+                                         ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+                                          ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                                                    Adrian Bece, 2015.
+                                        -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -73,7 +73,6 @@
                 <img class="img-responsive" id="img-intro" src="./resources/images/ca_logo_txt.png">
             </div>
         </div>
-
         <div class="container-full container-blue">
             <div class="row centeredColumns">
                 <div class="col-lg-5">
@@ -87,60 +86,154 @@
                     <br />
                 </div>
                 <div class="col-lg-7">
-                    <h4 class="centered">Education</h4><hr />
-                    <p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2015.- present : </b>Microsoft Virutal Academy - various courses</p>
-                    <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2013.- present : </b>Faculty of Electrical Engineering Osijek (Master's degree)</p>
-                    <p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2013.- 2014. : </b>E-learning - Mälardalen University, Sweden (Automata theory)</p>
-                    <p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2013. : </b> Earned a degree - Bachelor's degree in computer engineering</p>
-                    <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2010.-2013. : </b>Faculty of Electrical Engineering Osijek (Bachelor's degree)</p>
-                    <p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2010. : </b>Earned a degree - Electronics technician</p>
-                    <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2006.-2010. : </b>Elektrotehnička i prometna škola Osijek</p>
+
+                    <h4 class="centered noPadding">Hobbies and interests</h4>
+                    <div class="bs-glyphicons">
+                        <ul class="bs-glyphicons-list">
+                            <li>
+                                <span class="glyphicon glyphicon-modal-window" aria-hidden="true"></span>
+                                <span class="glyphicon-class">Frontend development</span>
+                            </li>
+
+                            <li>
+                                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                                <span class="glyphicon-class">Backend development</span>
+                            </li>
+
+                            <li>
+                                <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                <span class="glyphicon-class">Graphical design</span>
+                            </li>
+
+                            <li>
+                                <span class="glyphicon glyphicon-cd" aria-hidden="true"></span>
+                                <span class="glyphicon-class">Listening to music</span>
+                            </li>
+
+                            <li>
+                                <span class="glyphicon glyphicon-music" aria-hidden="true"></span>
+                                <span class="glyphicon-class">Playing guitar</span>
+                            </li>
+
+                            <li>
+                                <span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true"></span>
+                                <span class="glyphicon-class">Outdoor activities</span>
+                            </li>
+
+                            <li>
+                                <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
+                                <span class="glyphicon-class">Going out with friends</span>
+                            </li>
+
+                            <li>
+                                <span class="glyphicon glyphicon-ice-lolly" aria-hidden="true"></span> <!-- ice lolly looks like a paddle-->
+                                <span class="glyphicon-class">Playing table tennis</span>
+                            </li>
+                        </ul>
+                    </div>
 
                 </div>
             </div>
         </div>
-        <div class="container-full container-blue hobbiesGroup">
-            <h4 class="centered">Hobbies and interests</h4>
-            <div class="bs-glyphicons">
-                <ul class="bs-glyphicons-list">
-                    <li>
-                        <span class="glyphicon glyphicon-modal-window" aria-hidden="true"></span>
-                        <span class="glyphicon-class">Frontend development</span>
-                    </li>
+        <div class="container-full container-gray">
+            <div class="row">
+                <div class="col-lg-5">
+                    <h4 class="centered">Education</h4><hr />
+                    <p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2015.- present </b><br />Microsoft Virutal Academy - various courses</p>
+                    <hr /><p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2013.- present </b><br />Faculty of Electrical Engineering Osijek (Master's degree)</p>
+                    <hr /><p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2013.- 2014. </b><br />E-learning - Mälardalen University, Sweden (Automata theory)</p>
+                    <hr /> <p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2013. </b> <br />Earned a degree - Bachelor's degree in computer engineering</p>
+                    <hr /><p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2010.-2013. </b><br />Faculty of Electrical Engineering Osijek (Bachelor's degree)</p>
+                    <hr /><p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2010. </b><br />Earned a degree - Electronics technician</p>
+                    <hr /> <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2006.-2010. </b><br />Elektrotehnička i prometna škola Osijek</p>
+                    <hr />
+                </div>
 
-                    <li>
-                        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                        <span class="glyphicon-class">Backend development</span>
-                    </li>
+                <div class="col-lg-7 noPadding">
+                    <h4 class="centered">Skills and knowledge</h4>
+                    <div class="bs-glyphicons">
+                        <ul class="bs-glyphicons-list">
+                            <li>
+                                <h4 class="skillsContainer">C/C++</h4>
+                            </li>
 
-                    <li>
-                        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                        <span class="glyphicon-class">Graphical design</span>
-                    </li>
+                            <li>
+                                <h4 class="skillsContainer">C#</h4>
+                            </li>
 
-                    <li>
-                        <span class="glyphicon glyphicon-cd" aria-hidden="true"></span>
-                        <span class="glyphicon-class">Listening to music</span>
-                    </li>
+                            <li>
+                                <h4 class="skillsContainer">HTML</h4>
+                            </li>
 
-                    <li>
-                        <span class="glyphicon glyphicon-music" aria-hidden="true"></span>
-                        <span class="glyphicon-class">Playing guitar</span>
-                    </li>
+                            <li>
+                                <h4 class="skillsContainer">CSS</h4>
+                            </li>
 
-                    <li>
-                        <span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true"></span>
-                        <span class="glyphicon-class">Outdoor activities</span>
-                    </li>
+                            <li>
+                                <h4 class="skillsContainer">JS</h4>
+                            </li>
 
-                    <li>
-                        <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
-                        <span class="glyphicon-class">Going out with friends</span>
-                    </li>
-                </ul>
+                            <li>
+                                <h5 class="skillsContainer">JQuery</h5>
+                            </li>
+
+                            <li>
+                                <h4 class="skillsContainer">PHP</h4>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainer">MySQL</h5>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainer">Matlab</h5>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainerTwoRow">ASP .NET MVC</h5>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainerTwoRow">Graphic design</h5>
+                            </li>
+
+                            <li>
+                                <h6 class="skillsContainer">Wireframing</h6>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainerTwoRow">Github / SVN</h5>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainer">Robotics</h5>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainerTwoRow">Computer vision</h5>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainerTwoRow">Game design</h5>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainerTwoRow">VHDL</h5>
+                            </li>
+
+                            <li>
+                                <h5 class="skillsContainerTwoRow">Step 7</h5>
+                            </li>                           
+                            <li>
+                                <h4 class="skillsContainer">. . .</h4>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="container-full container-circles container" id="programming_related">
+        <div class="container-full container-circles container">
             <h1>Portfolio of my work</h1>
             <br />
             <div class="row">
@@ -187,7 +280,7 @@
             </footer>
         </div><!-- /.container -->
                     <!-- Bootstrap core JavaScript
-                                                                                                                            ================================================== -->
+                                                                                                                                                                ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
