--- a/index.html
+++ b/index.html
@@ -152,79 +152,79 @@
                 <div class="col-lg-7 noPadding">
                     <h4 class="centered">Skills and knowledge</h4>
                     <div class="bs-glyphicons">
-                        <ul class="bs-glyphicons-list">
-                            <li>
+                        <ul class="bs-glyphicons-list" id="skills_boxes">
+                            <li onclick=' window.location = "./skills.html#box_C_Cpp"'>
                                 <h4 class="skillsContainer">C/C++</h4>
                             </li>
 
-                            <li>
+                            <li onclick=' window.location = "./skills.html#box_Csharp"'>
                                 <h4 class="skillsContainer">C#</h4>
                             </li>
 
-                            <li>
+                            <li onclick=' window.location = "./skills.html#box_HTML_CSS"'>
                                 <h4 class="skillsContainer">HTML</h4>
                             </li>
 
-                            <li>
+                            <li onclick=' window.location = "./skills.html#box_HTML_CSS"'>
                                 <h4 class="skillsContainer">CSS</h4>
                             </li>
 
-                            <li>
+                            <li onclick=' window.location = "./skills.html#box_JS_JQ"'>
                                 <h4 class="skillsContainer">JS</h4>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainer">JQuery</h5>
+                            <li onclick=' window.location = "./skills.html#box_JS_JQ"'>
+                                <h4 class="skillsContainer">JQuery</h4>
                             </li>
 
-                            <li>
+                            <li onclick=' window.location = "./skills.html#PHP_lang"'>
                                 <h4 class="skillsContainer">PHP</h4>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainer">MySQL</h5>
+                            <li onclick=' window.location = "./skills.html#MySQL_DB"'>
+                                <h4 class="skillsContainer">MySQL</h4>
                             </li>
 
-                            <li>
+                            <li onclick=' window.location = "./skills.html#Matlab"'>
                                 <h5 class="skillsContainer">Matlab</h5>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainerTwoRow">ASP .NET MVC</h5>
+                            <li onclick=' window.location = "./skills.html#ASP_MVC"'>
+                                <h4 class="skillsContainerTwoRow">ASP .NET MVC</h4>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainerTwoRow">Graphic design</h5>
+                            <li onclick=' window.location = "./skills.html#programming_related"'>
+                                <h4 class="skillsContainerTwoRow">Graphic design</h4>
                             </li>
 
-                            <li>
-                                <h6 class="skillsContainer">Wireframing</h6>
+                            <li onclick=' window.location = "./skills.html#programming_related"'>
+                                <h5 class="skillsContainer">Wireframing</h5>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainerTwoRow">Github / SVN</h5>
+                            <li onclick=' window.location = "./skills.html#programming_related"'>
+                                <h5 class="skillsContainer">Github / SVN</h5>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainer">Robotics</h5>
+                            <li onclick=' window.location = "./skills.html#technical_skills"'>
+                                <h4 class="skillsContainer">Robotics</h4>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainerTwoRow">Computer vision</h5>
+                            <li onclick=' window.location = "./skills.html#technical_skills"'>
+                                <h4 class="skillsContainerTwoRow">Computer vision</h4>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainerTwoRow">Game design</h5>
+                            <li onclick=' window.location = "./skills.html#technical_skills"'>
+                                <h4 class="skillsContainerTwoRow">Game design</h4>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainerTwoRow">VHDL</h5>
+                            <li onclick=' window.location = "./skills.html#technical_skills"'>
+                                <h4 class="skillsContainer">VHDL</h4>
                             </li>
 
-                            <li>
-                                <h5 class="skillsContainerTwoRow">Step 7</h5>
+                            <li onclick=' window.location = "./skills.html#technical_skills"'>
+                                <h4 class="skillsContainer">Step 7</h4>
                             </li>                           
-                            <li>
+                            <li onclick=' window.location = "./skills.html"'>
                                 <h4 class="skillsContainer">. . .</h4>
                             </li>
 
@@ -242,7 +242,7 @@
                     <h2>My skills</h2>
                     <hr>
                     <p class="skills-text">I am mainly interested in frontend development, but I am also interested in backend development and graphics design. I am a developer by profession and a designer by passion. You can read about my skills and knowledge span in more detail by clicking on the button below.</p>
-                    <p><a class="btn btn-primary" href="#" role="button">Read about my skills »</a><br /><br /></p>
+                    <p><a class="btn btn-primary" href="./skills.html" role="button">Read about my skills »</a><br /><br /></p>
                 </div>
 
                 <div class="col-lg-4">
@@ -250,7 +250,7 @@
                     <h2>My projects</h2>
                     <hr>
                     <p class="skills-text">I've uploaded some of my projects that showcase my work on Github with full source files available. You can read about my projects in more detail, view the screenshots and download source files by clicking on the button below.</p>
-                    <p><a class="btn btn-primary" href="#" role="button">Check out my projects »</a><br /><br /></p>
+                    <p><a class="btn btn-primary" href="./projects.html" role="button">Check out my projects »</a><br /><br /></p>
                 </div>
 
                 <div class="col-lg-4">
