019 Designs, CSS and Google Analytics
Added new content for Designs, CSS and added google Analytics function

--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,13 @@
     <!--
     
-      ██████╗ ██████╗ ██████╗ ███████╗ █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-     ██╔════╝██╔═══██╗██╔══██╗██╔════╝██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-     ██║     ██║   ██║██║  ██║█████╗  ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-     ██║     ██║   ██║██║  ██║██╔══╝  ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-     ╚██████╗╚██████╔╝██████╔╝███████╗██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-      ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                Adrian Bece, 2015.
-    -->
+          ██████╗ ██████╗ ██████╗ ███████╗ █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+         ██╔════╝██╔═══██╗██╔══██╗██╔════╝██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+         ██║     ██║   ██║██║  ██║█████╗  ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+         ██║     ██║   ██║██║  ██║██╔══╝  ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+         ╚██████╗╚██████╔╝██████╔╝███████╗██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+          ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                    Adrian Bece, 2015.
+        -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -61,8 +61,8 @@
                         <li><a href="./index.html"><span class="glyphicon glyphicon-user myglyph" aria-hidden="true"></span>About me</a></li>
                         <li><a href="./skills.html"><span class="glyphicon glyphicon-education myglyph" aria-hidden="true"></span>Skills</a></li>
                         <li class="active"><a href="./projects.html"><span class="glyphicon glyphicon-briefcase myglyph" aria-hidden="true"></span>Projects</a></li>
-                        <li><a href="./designs"><span class="glyphicon glyphicon-picture myglyph" aria-hidden="true"></span>Designs</a></li>
-                        <li><a href="./contact"><span class="glyphicon glyphicon-earphone myglyph" aria-hidden="true"></span>Contact</a></li>
+                        <li><a href="./designs.html"><span class="glyphicon glyphicon-picture myglyph" aria-hidden="true"></span>Designs</a></li>
+                        <li><a href="./contact.html"><span class="glyphicon glyphicon-earphone myglyph" aria-hidden="true"></span>Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -70,6 +70,20 @@
         <!-- NAV END  -->
         <!-- ------------ CONTENT ------------  -->
         <div class="blurContainer">
+
+            <div id="imageModal" class="modal fade" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">×</button>
+                            <h3 class="modal-title">Heading</h3>
+                        </div>
+                        <div class="modal-body">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="jumbotron noMargin jumbotron_skills">
                 <div class="container">
                     <div class="container">
@@ -241,20 +255,6 @@
                     </div>
                 </div>
             </div>
-
-            <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">×</button>
-                            <h3 class="modal-title">Heading</h3>
-                        </div>
-                        <div class="modal-body">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
 
             <div class="container-full container-gray" id="g_blockRunnerRampage">
                 <div class="row">
