--- a/skills.html
+++ b/skills.html
@@ -1,13 +1,13 @@
     <!--
     
-          ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-         ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-         ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-         ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-         ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-          ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                    Adrian Bece, 2015.
-        -->
+              ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+             ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+             ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+             ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+             ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+              ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                        Adrian Bece, 2015.
+            -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -61,8 +61,8 @@
                         <li><a href="./index.html"><span class="glyphicon glyphicon-user myglyph" aria-hidden="true"></span>About me</a></li>
                         <li class="active"><a id="a_skills_top"><span class="glyphicon glyphicon-education myglyph" aria-hidden="true"></span>Skills</a></li>
                         <li><a href="./projects.html"><span class="glyphicon glyphicon-briefcase myglyph" aria-hidden="true"></span>Projects</a></li>
-                        <li><a href="./designs"><span class="glyphicon glyphicon-picture myglyph" aria-hidden="true"></span>Designs</a></li>
-                        <li><a href="./contact"><span class="glyphicon glyphicon-earphone myglyph" aria-hidden="true"></span>Contact</a></li>
+                        <li><a href="./designs.html"><span class="glyphicon glyphicon-picture myglyph" aria-hidden="true"></span>Designs</a></li>
+                        <li><a href="./contact.html"><span class="glyphicon glyphicon-earphone myglyph" aria-hidden="true"></span>Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -553,7 +553,7 @@ Familiar
             </div><!-- /.row -->
         </div>
 
-                           
+
         <div class="container-full container-blue container-circles" id="technical_skills">
             <h1>Other Technical Skills</h1>
             <br />
@@ -617,7 +617,7 @@ Familiar
         <div class="container marketing">
             <footer>
                 <hr>
-                <p class="pull-right"><a href="#">Back to top</a></p>
+                <p class="pull-right"><a id="a_projects_top">Back to top</a></p>
                 <p>© 2015 Adrian Bece </p>
             </footer>
         </div>
