021 Embed youtube bugfix
Slow loading bug

--- a/designs.html
+++ b/designs.html
@@ -131,7 +131,7 @@
             <h2>RavenLord - "Black Friar" lyrics video</h2><hr />
             <div class="row">
                 <div class="col-lg-5">
-                    <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="http://www.youtube.com/embed/it8oGww8Bfo"></iframe></div><br />
+                    <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="http://www.youtube.com/embed/it8oGww8Bfo?html5=1"></iframe></div><br />
                 </div>
                 <div class="col-md-7">
                     <p>In 2013. I've made a lyrics video for an international heavy metal band "Raven Lord". I've used Camtasia to animate the images that I've made in Photoshop and make do the transition between them using Camtasia's special effects. Also I've used official images and cover art from band's official artist and designer to create this video.</p>
