--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         <script src="./index_files/ie-emulation-modes-warning.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="./bootstrap-3.3.2-dist/js/codeAdrianJS.js"></script>
-        <script src="./bootstrap-3.3.2-dist/js/analytics.js"></script>
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
 
         <style type="text/css"></style>
@@ -289,5 +288,21 @@
         <script src="./index_files/docs.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
+
+<script><![CDATA[
+
+(function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+ga('create', 'UA-61039396-1', 'auto');
+ga('send', 'pageview');
+
+]]></script>
+
+
     </body>
 </html>
