--- a/designs.html
+++ b/designs.html
@@ -14,7 +14,7 @@
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
-        <meta property="og:image" content="http://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
+        <meta property="og:image" content="https://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
         <meta property="og:site_name" content="Code Adrian">
         <meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Frontend development, Backend development, design, science, robotics, computer vision and more.">
         <!-- Facebook meta info end -->
@@ -91,7 +91,7 @@
                 <div class="col-md-9">
                     <p>Since 2009. I've been working with a British musician Jamie Mallender who previously worked with members of Black Sabbath, Tony Martin, Ravenlord, T-Rex, etc. I've created cd covers and promo materials for his 2 albums: "Return to bass" and "Tunes from the mothership" released in 2009. and 2011., respectively.</p>
                     <p>Jamie has been a great friend of mine and fellow music-buff ever since we started working together. He gave me the job that kickstarted my interest in graphic design and I've kept honing my skills ever since. You can check out his albums and music by clicking on the buttons below.</p><br />
-                    <p><a class="btn btn-default" href="http://www.jamiemallender.co.uk/" target="_blank" role="button">Official Website »</a>&nbsp&nbsp&nbsp&nbsp<a class="btn btn-default" href="http://www.cdbaby.com/Artist/JamieMallender" target="_blank" role="button">Albums and music »</a></br/></p>
+                    <p><a class="btn btn-default" href="https://www.jamiemallender.co.uk/" target="_blank" role="button">Official Website »</a>&nbsp&nbsp&nbsp&nbsp<a class="btn btn-default" href="https://www.cdbaby.com/Artist/JamieMallender" target="_blank" role="button">Albums and music »</a></br/></p>
                 </div>
             </div>
             <hr />
@@ -131,7 +131,7 @@
             <h2>RavenLord - "Black Friar" lyrics video</h2><hr />
             <div class="row">
                 <div class="col-lg-5">
-                    <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="http://www.youtube.com/embed/it8oGww8Bfo?html5=1"></iframe></div><br />
+                    <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/it8oGww8Bfo?html5=1"></iframe></div><br />
                 </div>
                 <div class="col-md-7">
                     <p>In 2013. I've made a lyrics video for an international heavy metal band "Raven Lord". I've used Camtasia to animate the images that I've made in Photoshop and make do the transition between them using Camtasia's special effects. Also I've used official images and cover art from band's official artist and designer to create this video.</p>
@@ -216,7 +216,7 @@
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
 
-<script><![CDATA[
+<script>
 
 (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -228,7 +228,7 @@
 ga('create', 'UA-61039396-1', 'auto');
 ga('send', 'pageview');
 
-]]></script>
+</script>
 
 
     </body>
