--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
-        <meta property="og:image" content="http://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
+        <meta property="og:image" content="https://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
         <meta property="og:site_name" content="Code Adrian">
         <meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Programming, design, science, robotics, computer vision and more.">
         <!-- Facebook meta info end -->
@@ -154,78 +154,78 @@
                     <h4 class="centered">Skills and knowledge</h4>
                     <div class="bs-glyphicons">
                         <ul class="bs-glyphicons-list" id="skills_boxes">
-                            <li onclick="" window.location="./skills.html#box_C_Cpp" "">
+                            <li onclick="window.location='./skills.html#box_C_Cpp'">
                                 <h4 class="skillsContainer">C/C++</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#box_Csharp" "">
+                            <li onclick="window.location='./skills.html#box_Csharp'">
                                 <h4 class="skillsContainer">C#</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#box_HTML_CSS" "">
+                            <li onclick="window.location='./skills.html#box_HTML_CSS'">
                                 <h4 class="skillsContainer">HTML</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#box_HTML_CSS" "">
+                            <li onclick="window.location='./skills.html#box_HTML_CSS'">
                                 <h4 class="skillsContainer">CSS</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#box_JS_JQ" "">
+                            <li onclick="window.location='./skills.html#box_JS_JQ'">
                                 <h4 class="skillsContainer">JS</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#box_JS_JQ" "">
+                            <li onclick="window.location='./skills.html#box_JS_JQ'">
                                 <h4 class="skillsContainer">JQuery</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#PHP_lang" "">
+                            <li onclick="window.location='./skills.html#PHP_lang'">
                                 <h4 class="skillsContainer">PHP</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#MySQL_DB" "">
+                            <li onclick="window.location='./skills.html#MySQL_DB'">
                                 <h4 class="skillsContainer">MySQL</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#Matlab" "">
+                            <li onclick="window.location='./skills.html#Matlab'">
                                 <h5 class="skillsContainer">Matlab</h5>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#ASP_MVC" "">
+                            <li onclick="window.location='./skills.html#ASP_MVC'">
                                 <h4 class="skillsContainerTwoRow">ASP .NET MVC</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#programming_related" "">
+                            <li onclick="window.location='./skills.html#programming_related'">
                                 <h4 class="skillsContainerTwoRow">Graphic design</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#programming_related" "">
+                            <li onclick="window.location='./skills.html#programming_related'">
                                 <h5 class="skillsContainer">Wireframing</h5>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#programming_related" "">
+                            <li onclick="window.location='./skills.html#programming_related'">
                                 <h5 class="skillsContainer">Github / SVN</h5>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#technical_skills" "">
+                            <li onclick="window.location='./skills.html#technical_skills'">
                                 <h4 class="skillsContainer">Robotics</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#technical_skills" "">
+                            <li onclick="window.location='./skills.html#technical_skills'">
                                 <h4 class="skillsContainerTwoRow">Computer vision</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#technical_skills" "">
+                            <li onclick="window.location='./skills.html#technical_skills'">
                                 <h4 class="skillsContainerTwoRow">Game design</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#technical_skills" "">
+                            <li onclick="window.location='./skills.html#technical_skills'">
                                 <h4 class="skillsContainer">VHDL</h4>
                             </li>
 
-                            <li onclick="" window.location="./skills.html#technical_skills" "">
+                            <li onclick="window.location='./skills.html#technical_skills'">
                                 <h4 class="skillsContainer">Step 7</h4>
                             </li>
-                            <li onclick="" window.location="./skills.html" "">
+                            <li onclick="window.location='./skills.html'">
                                 <h4 class="skillsContainer">. . .</h4>
                             </li>
 
@@ -289,7 +289,7 @@
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
 
-<script><![CDATA[
+<script>
 
 (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -301,7 +301,7 @@
 ga('create', 'UA-61039396-1', 'auto');
 ga('send', 'pageview');
 
-]]></script>
+</script>
 
 
     </body>
