--- a/projects.html
+++ b/projects.html
@@ -179,7 +179,7 @@
                         <p><b>Technology:</b><br />C#, AForge.NET</p>
                         <p><b>Software:</b><br />Visual Studio, Adobe Photoshop</p>
                         <p><b>Project:</b></p>
-                        <p><a class="btn btn-default" href="http://github.com/codeAdrian/Omnivision" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-default" href="https://github.com/codeAdrian/Omnivision" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -209,7 +209,7 @@
                         <p><b>Technology:</b><br />C#, SharpDX, MySQL .NET Connector</p>
                         <p><b>Software:</b><br />Visual Studio, Adobe Photoshop, Audacity, XAMPP</p>
                         <p><b>Project:</b></p>
-                        <p><a class="btn btn-primary" href="http://github.com/codeAdrian/HexagonalMelody" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-primary" href="https://github.com/codeAdrian/HexagonalMelody" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -238,7 +238,7 @@
                         <p><b>Technology:</b><br />C#</p>
                         <p><b>Software:</b><br />Visual Studio</p>
                         <p><b>Project:</b></p>
-                        <p><a class="btn btn-default" href="http://github.com/codeAdrian/ImageToASCIIart" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-default" href="https://github.com/codeAdrian/ImageToASCIIart" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -267,7 +267,7 @@
                         <p><b>Technology:</b><br />C#</p>
                         <p><b>Software:</b><br />Visual Studio, Adobe Photoshop</p>
                         <p><b>Project:</b></p>
-                        <p><a class="btn btn-primary" href="http://github.com/codeAdrian/Block-Runner-Rampage" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-primary" href="https://github.com/codeAdrian/Block-Runner-Rampage" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -296,7 +296,7 @@
                         <p><b>Technology:</b><br />C#, MySQL .NET Connector</p>
                         <p><b>Software:</b><br />Visual Studio, Adobe Photoshop, XAMPP</p>
                         <p><b>Project:</b></p>
-                        <p><a class="btn btn-default" href="http://github.com/codeAdrian/FoodlyApp" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-default" href="https://github.com/codeAdrian/FoodlyApp" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -326,7 +326,7 @@
                         <p><b>Technology:</b><br />HTML, CSS, Javascript, JQuery, PHP, MySQL</p>
                         <p><b>Software:</b><br />Microsoft Expression, Adobe Photoshop, XAMPP</p>
                         <p><b>Project:</b></p>
-                        <p><a class="btn btn-primary" href="http://github.com/codeAdrian/Foodly" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-primary" href="https://github.com/codeAdrian/Foodly" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -386,7 +386,7 @@
                         <p><b>Technology:</b><br />HTML, CSS, Javascript, JQuery, Bootstrap</p>
                         <p><b>Software:</b><br />Microsoft WebMatrix, Adobe Photoshop</p>
                         <p><b>Project:</b></p>
-                        <p><a class="btn btn-primary" href="http://github.com/codeAdrian/codeAdrian.github.io" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-primary" href="https://github.com/codeAdrian/codeAdrian.github.io" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -465,7 +465,7 @@
                         <p><b>Technology:</b><br />Visual C++, OpenCV</p>
                         <p><b>Software:</b><br />Visual Studio</p>
                         <p><b>Project:</b></p>
-                        <p><a class="btn btn-default" href="http://github.com/codeAdrian/ComputerVision" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-default" href="https://github.com/codeAdrian/ComputerVision" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -495,7 +495,7 @@
                         <p><b>Technology:</b><br />C#, MySQL, MySQL .NET Connector</p>
                         <p><b>Software:</b><br />Visual Studio, XAMPP</p>
                         <p><b>Project: </b></p>
-                        <p><a class="btn btn-default" href="http://github.com/codeAdrian/Histogram-based-image-search" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-default" href="https://github.com/codeAdrian/Histogram-based-image-search" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -532,7 +532,7 @@
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
 
-<script><![CDATA[
+<script>
 
 (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -544,7 +544,7 @@
 ga('create', 'UA-61039396-1', 'auto');
 ga('send', 'pageview');
 
-]]></script>
+</script>
 
 
     </body>
