--- a/skills.html
+++ b/skills.html
@@ -629,7 +629,7 @@ Familiar
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
 
-<script><![CDATA[
+<script>
 
 (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -641,7 +641,7 @@ Familiar
 ga('create', 'UA-61039396-1', 'auto');
 ga('send', 'pageview');
 
-]]></script>
+</script>
 
     </body>
 </html>
